@@ -318,6 +318,7 @@ public class AuthorizationInterceptor extends HandlerInterceptorAdapter {
 				|| StringUtils.equals(page, "deletePivotTableJs")
 				|| StringUtils.equals(page, "saveGridstack")
 				|| StringUtils.equals(page, "deleteGridstack")
+				|| StringUtils.equals(page, "selfServiceDashboards")
 				|| StringUtils.equals(page, "getLovValues")) {
 			//everyone can access
 			//NOTE: "everyone" doesn't include when accessing as the art database user
