@@ -244,6 +244,8 @@ header.link.reportsConfiguration  = Reports
 header.link.ruleValues            = Rule Values
 header.link.rules                 = Rules
 header.link.schedules             = Schedules
+header.link.selfService           = Self Service
+header.link.selfServiceDashboards = Dashboards
 header.link.serverInfo            = Server Information
 header.link.settings              = Settings
 header.link.userGroupMembership   = User Group Membership
@@ -650,6 +652,7 @@ page.title.ruleValuesConfiguration            = Rule Value Configuration
 page.title.rules                              = Rules
 page.title.scheduleUsage                      = Schedule Usage
 page.title.schedules                          = Schedules
+page.title.selfServiceDashboards              = Self Service Dashboards
 page.title.serverInfo                         = Server Information
 page.title.settings                           = Settings
 page.title.sharedJobs                         = Shared Jobs
