@@ -15,9 +15,9 @@ datasource.label.username = Usuario
 
 dialog.button.delete = Borar
 
-header.link.changePassword = Cambiar Clave
-header.link.logout         = Salir
-header.link.logs           = Registros
+header.link.changePassword        = Cambiar Clave
+header.link.logout                = Salir
+header.link.logs                  = Registros
 
 jobType = Tipo de Trabajo
 
@@ -66,16 +66,16 @@ logout.link.login = Ingresar
 
 logs = Registros
 
-page.action.delete        = Borar
-page.action.edit          = Editar
-page.action.refresh       = Refrescar
-page.button.save          = Salvar
-page.checkbox.all         = Todos
-page.label.password       = Clave
-page.label.username       = Usuario
-page.title.changePassword = Cambiar Clave
-page.title.logs           = Registros
-page.title.password       = Clave
+page.action.delete               = Borar
+page.action.edit                 = Editar
+page.action.refresh              = Refrescar
+page.button.save                 = Salvar
+page.checkbox.all                = Todos
+page.label.password              = Clave
+page.label.username              = Usuario
+page.title.changePassword        = Cambiar Clave
+page.title.logs                  = Registros
+page.title.password              = Clave
 
 password = Clave
 
