@@ -15,8 +15,8 @@ datasource.label.username = Felhaszn\u00E1l\u00F3n\u00E9v
 
 dialog.button.delete = T\u00F6rl\u00E9s
 
-header.link.changePassword = Jelsz\u00F3 cser\u00E9je
-header.link.logout         = Kijelentkez\u00E9s
+header.link.changePassword        = Jelsz\u00F3 cser\u00E9je
+header.link.logout                = Kijelentkez\u00E9s
 
 jobType = Job Type
 
@@ -44,14 +44,14 @@ logout.link.login = Bejelentkez\u00E9s
 
 logs = Logs
 
-page.action.delete        = T\u00F6rl\u00E9s
-page.action.edit          = Szerkeszt\u00E9s
-page.action.refresh       = Friss\u00EDt\u00E9s
-page.button.save          = Ment\u00E9s
-page.label.password       = Jelsz\u00F3
-page.label.username       = Felhaszn\u00E1l\u00F3n\u00E9v
-page.title.changePassword = Jelsz\u00F3 cser\u00E9je
-page.title.password       = Jelsz\u00F3
+page.action.delete               = T\u00F6rl\u00E9s
+page.action.edit                 = Szerkeszt\u00E9s
+page.action.refresh              = Friss\u00EDt\u00E9s
+page.button.save                 = Ment\u00E9s
+page.label.password              = Jelsz\u00F3
+page.label.username              = Felhaszn\u00E1l\u00F3n\u00E9v
+page.title.changePassword        = Jelsz\u00F3 cser\u00E9je
+page.title.password              = Jelsz\u00F3
 
 password = Jelsz\u00F3
 
