@@ -15,8 +15,8 @@ datasource.label.username = Utente
 
 dialog.button.delete = Cancella
 
-header.link.changePassword = Cambia Password
-header.link.logout         = Esci
+header.link.changePassword        = Cambia Password
+header.link.logout                = Esci
 
 jobType = Tipo
 
@@ -48,14 +48,14 @@ logout.link.login = Entra
 
 logs = Logs
 
-page.action.delete        = Cancella
-page.action.edit          = Modifica
-page.action.refresh       = Aggiorna
-page.checkbox.all         = Tutti
-page.label.password       = Password
-page.label.username       = Utente
-page.title.changePassword = Cambia Password
-page.title.password       = Password
+page.action.delete               = Cancella
+page.action.edit                 = Modifica
+page.action.refresh              = Aggiorna
+page.checkbox.all                = Tutti
+page.label.password              = Password
+page.label.username              = Utente
+page.title.changePassword        = Cambia Password
+page.title.password              = Password
 
 password = Password
 
