@@ -103,8 +103,8 @@ datasources.message.datasourceUpdated    = Fonte de dados atualizada
 datasources.message.linkedReportsExist   = N\u00C3\u00A3o pode excluir a fonte de dados. Os seguintes relat\u00C3\u00B3rios utilizam esta fonte de dados 
 datasources.text.url                     = URL
 
-destinations.label.port        = Porta
-destinations.label.server      = Servidor
+destinations.label.port   = Porta
+destinations.label.server = Servidor
 
 dialog.button.cancel            = Cancelar
 dialog.button.delete            = Excluir
@@ -155,39 +155,39 @@ ftpServers.label.port            = Porta
 ftpServers.label.remoteDirectory = Pasta remota
 ftpServers.label.server          = Servidor
 
-header.link.accessRights         = Permiss\u00C3\u00B5es de acesso
-header.link.adminRights          = Permiss\u00C3\u00B5es de administrador
-header.link.analytics            = Anal\u00C3\u00ADtico
-header.link.archives             = Arquivos
-header.link.artDatabase          = Base de dados ART
-header.link.caches               = "Caches"
-header.link.changePassword       = Mudar senha
-header.link.configure            = Configurar
-header.link.connections          = Conex\u00C3\u00B5es
-header.link.datasources          = Fontes de dados
-header.link.documentation        = Documenta\u00C3\u00A7\u00C3\u00A3o
-header.link.filterValues         = Valores de Filtro
-header.link.filters              = Filtros
-header.link.ftpServers           = Servidores FTP
-header.link.jobs                 = Trabalhos
-header.link.jobsConfiguration    = Configura\u00C3\u00A7\u00C3\u00A3o de trabalhos
-header.link.language             = L\u00C3\u00ADngua
-header.link.loggers              = Registradores (log)
-header.link.logout               = Sair
-header.link.logs                 = Registros (log)
-header.link.parameters           = Par\u00C3\u00A2metros
-header.link.password             = Senha
-header.link.reportGroups         = Grupos de relat\u00C3\u00B3rio
-header.link.reports              = Relat\u00C3\u00B3rios
-header.link.reportsConfiguration = Configura\u00C3\u00A7\u00C3\u00A3o de relat\u00C3\u00B3rios
-header.link.ruleValues           = Valores de regras
-header.link.rules                = Regras
-header.link.schedules            = Agendas
-header.link.serverInfo           = Informa\u00C3\u00A7\u00C3\u00B5es do servidor
-header.link.settings             = Configura\u00C3\u00A7\u00C3\u00B5es
-header.link.userGroupMembership  = Membros de grupos de usu\u00C3\u00A1rios
-header.link.userGroups           = Grupos de usu\u00C3\u00A1rios
-header.link.users                = Usu\u00C3\u00A1rios
+header.link.accessRights          = Permiss\u00C3\u00B5es de acesso
+header.link.adminRights           = Permiss\u00C3\u00B5es de administrador
+header.link.analytics             = Anal\u00C3\u00ADtico
+header.link.archives              = Arquivos
+header.link.artDatabase           = Base de dados ART
+header.link.caches                = "Caches"
+header.link.changePassword        = Mudar senha
+header.link.configure             = Configurar
+header.link.connections           = Conex\u00C3\u00B5es
+header.link.datasources           = Fontes de dados
+header.link.documentation         = Documenta\u00C3\u00A7\u00C3\u00A3o
+header.link.filterValues          = Valores de Filtro
+header.link.filters               = Filtros
+header.link.ftpServers            = Servidores FTP
+header.link.jobs                  = Trabalhos
+header.link.jobsConfiguration     = Configura\u00C3\u00A7\u00C3\u00A3o de trabalhos
+header.link.language              = L\u00C3\u00ADngua
+header.link.loggers               = Registradores (log)
+header.link.logout                = Sair
+header.link.logs                  = Registros (log)
+header.link.parameters            = Par\u00C3\u00A2metros
+header.link.password              = Senha
+header.link.reportGroups          = Grupos de relat\u00C3\u00B3rio
+header.link.reports               = Relat\u00C3\u00B3rios
+header.link.reportsConfiguration  = Configura\u00C3\u00A7\u00C3\u00A3o de relat\u00C3\u00B3rios
+header.link.ruleValues            = Valores de regras
+header.link.rules                 = Regras
+header.link.schedules             = Agendas
+header.link.serverInfo            = Informa\u00C3\u00A7\u00C3\u00B5es do servidor
+header.link.settings              = Configura\u00C3\u00A7\u00C3\u00B5es
+header.link.userGroupMembership   = Membros de grupos de usu\u00C3\u00A1rios
+header.link.userGroups            = Grupos de usu\u00C3\u00A1rios
+header.link.users                 = Usu\u00C3\u00A1rios
 
 jobType = Tipo de trabalho
 
