@@ -223,6 +223,8 @@ header.link.reportsConfiguration  = Ripoti
 header.link.ruleValues            = Thamani-Kanuni
 header.link.rules                 = Kanuni
 header.link.schedules             = Ratiba
+header.link.selfService           = Kujitumikia
+header.link.selfServiceDashboards = Dashibodi
 header.link.serverInfo            = Kuhusu Seva
 header.link.settings              = Vipimo
 header.link.userGroupMembership   = Uanachama katika Vikundi-Watumiaji
@@ -625,6 +627,7 @@ page.title.ruleValuesConfiguration            = Usanidi wa thamani-kanuni
 page.title.rules                              = Kanuni
 page.title.scheduleUsage                      = Matumizi ya ratiba
 page.title.schedules                          = Ratiba
+page.title.selfServiceDashboards              = Dashibodi za kujitumikia
 page.title.serverInfo                         = Kuhusu Seva
 page.title.settings                           = Vipimo
 page.title.smtpServerUsage                    = Matumizi ya seva ya SMTP
