@@ -13,8 +13,8 @@ dataTables.text.showAllRows = All
 datasource.label.password = \u5BC6\u78BC
 datasource.label.username = \u5E33\u865F
 
-header.link.changePassword = \u66F4\u6539\u5BC6\u78BC
-header.link.logout         = \u767B\u51FA
+header.link.changePassword        = \u66F4\u6539\u5BC6\u78BC
+header.link.logout                = \u767B\u51FA
 
 jobType = Job Type
 
@@ -34,11 +34,11 @@ logout.link.login = \u767B\u5165
 
 logs = Logs
 
-page.action.refresh       = \u91CD\u65B0\u6574\u7406
-page.label.password       = \u5BC6\u78BC
-page.label.username       = \u5E33\u865F
-page.title.changePassword = \u66F4\u6539\u5BC6\u78BC
-page.title.password       = \u5BC6\u78BC
+page.action.refresh              = \u91CD\u65B0\u6574\u7406
+page.label.password              = \u5BC6\u78BC
+page.label.username              = \u5E33\u865F
+page.title.changePassword        = \u66F4\u6539\u5BC6\u78BC
+page.title.password              = \u5BC6\u78BC
 
 password = \u5BC6\u78BC
 
